# ia-uem-2018

./: README.md
ia2/: read.py
ia2/code/: read.py
ml/: data_spec.txt  train_min.data
ml/src/: Perceptron.py  PerceptronSig.py  main.py  test.py
rands/cap/: rand_capfast  rand_capfast.c
trab1_bolsa/: CMakeLists.txt  dados2014.txt  dados2015.txt  dados2016.txt  redutor.sh
trab1_bolsa/src/: AITraining.cpp  BaseInvestor.cpp  BasicInvestor.cpp  ConfInvestor.cpp  ConfMMSInvestor.cpp  MAEInvestor.cpp  MASInvestor.cpp  MMEInvestor.cpp  MMSInvestor.cpp  Market.cpp  NoInvestor.cpp  OracleInvestor.cpp  UserInvestor.cpp  Utils.cpp  WorkDay.cpp  WorkPaper.cpp  main.cpp  utils.cpp
trab1_bolsa/src/include/: AITraining.h  BaseInvestor.h  BasicInvestor.h  Company.h  ConfInvestor.h  ConfMMSInvestor.h  Investor.h  MAEInvestor.h  MASInvestor.h  MMEInvestor.h  MMSInvestor.h  Market.h  NoInvestor.h  OracleInvestor.h  UserInvestor.h  Utils.h  WorkDay.h  WorkPaper.h  utils.h
